--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "eslint-config-next": "^14.2.1",
     "typescript": "^5.4.5"
   }
 }
