--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
